# LunarisDB

./: README.md  main.py  pyproject.toml  requirements.txt
db/: connection.py  db_events.py
ui/: about_window.py  menu.py  result_table.py  sql_editor.py  table_column.py  ui_builder.py  ui_events.py
utils/: erd_generator.py  exporter.py
